solved problems with paging and creating lots